--- a/public_html/index.css
+++ b/public_html/index.css
@@ -1,3 +1,37 @@
 body {
-	background-color: #b0c4de;
+background-color: #FFCC66;
+background-image: url("White-Orange.jpg");
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: top left;
+}
+
+
+body {
+color: #990000;
+background-color: #F90;
+position:absolute;
+top: 80px;
+left: 200px;
+}
+
+
+div.ex
+{
+width: 595px; 
+height: 200px; 
+overflow: auto; 
+padding: 5px;
+background-color: #ffaf00;
+}
+
+
+form.ex1
+{
+background-color: #ffaf00;
+}
+
+form.ex2
+{
+background-color: #ffaf00;
 }
